MDACA 3.0.1 (#2378)
* Start version 2.15.0
Bump to version 2.15.0
Updated Milestones for Atlas and WebAPI

* Permission Performance Optimizations (#2341)

* Implemented permission lookup to bypass hibernate.
* Moved PermissionsDTO to PermissionManager
* Removed GSON to use the app-wide ObjectMapper from Jackson
* Removed unused imports to GSON.

* Add Databricks profile (#2339)

* Create new webapi-databricks profile
* Check for spark and databricks connection string info

* MDACA Spring Boot 3 migration

* MDACA Spring Boot 3 migration

* Updated for MDACA Migration to SB 3

* Updates for MDACA Migration to SB 3

* MDACA Spring boot 3 migration

* changes for MDACA Migration to SB 3

* MDACA Spring boot 3 migration

* updates for MDACA migration to SB 3

* updates for MDACA Migration to SB 3

* changes for MDACA Migration to SB 3

* MDACA Spring Boot 3 migration, deprecated @TypeDefs & @TypeDef replaced

* updates for MDACA migration to SB 3

* MDACA Spring Boot 3 migration comment out jerey classes that need refactoring due to deprecation

* MDACA Spring Boot 3 migration

* Updates for MDACA Migration for SB 3

* MDACA Spring Boot 3 migration

* MDACA Spring Boot 3 migration

* MDACA Spring Boot 3 migration

* MDACA Spring Boot 3 migration

* MDACA Spring Boot 3 migration

* MDACA Spring Boot 3 migration

* Updates for MDACA Migration to SB 3

* MDACA Spring Boot 3 migration

* fix merge fix

* updates for MDACA Migration to SB3

* MDACA Spring Boot 3 migration

* MDACA Spring Boot 3 migration

* increased log4j version for MDACA Migration to SB 3

* Updates for MDACA Migration to SB 3

* MDACA Spring Boot 3 migration

* MDACA Spring Boot 3 migration compilation issue

* Updated config for MDACA Migration to SB 3

* MDACA Spring Boot 3.2.5 migration, other recipes

* MDACA Spring Boot 325 migration pom cleanup

* MDACA Spring Boot 325 migration pom update security versions

* MDACA Spring Boot 3 migration

* changes for MDACA Migration to SB 3

* updates for M