@@ -1,6 +1,7 @@
 package org.ohdsi.webapi.feanalysis;
 
-import com.cosium.spring.data.jpa.entity.graph.domain.EntityGraph;
+import com.cosium.spring.data.jpa.entity.graph.domain2.DynamicEntityGraph;
+import com.cosium.spring.data.jpa.entity.graph.domain2.EntityGraph;
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.ohdsi.analysis.cohortcharacterization.design.CcResultType;
@@ -22,7 +23,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.ws.rs.NotFoundException;
+import jakarta.ws.rs.NotFoundException;
 import java.util.*;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -41,10 +42,7 @@ public class FeAnalysisServiceImpl extends AbstractDaoService implements FeAnaly
     private final ApplicationEventPublisher eventPublisher;
     private FeAnalysisAggregateRepository aggregateRepository;
 
-    private final EntityGraph defaultEntityGraph = EntityUtils.fromAttributePaths(
-            "createdBy",
-            "modifiedBy"
-    );
+    private final EntityGraph defaultEntityGraph = DynamicEntityGraph.loading().addPath("createdBy").addPath("modifiedBy").build();
 
     public FeAnalysisServiceImpl(
             final FeAnalysisEntityRepository analysisRepository,
@@ -163,12 +161,10 @@ public class FeAnalysisServiceImpl extends AbstractDaoService implements FeAnaly
 
         checkEntityLocked(savedEntity);
         savedEntity.setDescr(updatedEntity.getDescr());
-        if (savedEntity instanceof FeAnalysisWithCriteriaEntity && updatedEntity instanceof FeAnalysisWithCriteriaEntity) {
-          FeAnalysisWithCriteriaEntity<?> updatedWithCriteriaEntity = (FeAnalysisWithCriteriaEntity) updatedEntity,
-                  savedWithCriteria = (FeAnalysisWithCriteriaEntity) savedEntity;
+        if (savedEntity instanceof FeAnalysisWithCriteriaEntity savedWithCriteria && updatedEntity instanceof FeAnalysisWithCriteriaEntity updatedWithCriteriaEntity) {
           removeFeAnalysisCriteriaEntities(savedWithCriteria, updatedWithCriteriaEntity);
-          updatedWithCriteriaEntity.getDesign().forEach(criteria -> criteria.setFeatureAnalysis(savedWithCriteria));
-          createOrUpdateConceptSetEntity((FeAnalysisWithCriteriaEntity) savedEntity, updatedWithCriteriaEntity.getConceptSetEntity());
+          updatedWithCriteriaEntity.getDesign().forEach(criteria -> ((FeAnalysisConcepsetEntity) criteria).setFeatureAnalysis(savedWithCriteria));
+          createOrUpdateConceptSetEntity(savedWithCriteria, updatedWithCriteriaEntity.getConceptSetEntity());
         }
         savedEntity.setDesign(updatedEntity.getDesign());
         if (Objects.nonNull(updatedEntity.getDomain())) {
@@ -196,7 +192,7 @@ public class FeAnalysisServiceImpl extends AbstractDaoService implements FeAnaly
       List<FeAnalysisCriteriaEntity> removed = original.getDesign().stream()
               .filter(c -> updated.getDesign().stream().noneMatch(u -> Objects.equals(c.getId(), u.getId())))
               .collect(Collectors.toList());
-      criteriaRepository.delete(removed);
+      criteriaRepository.deleteAll(removed);
     }
 
     @Override
@@ -263,7 +259,7 @@ public class FeAnalysisServiceImpl extends AbstractDaoService implements FeAnaly
 
     private void checkEntityLocked(FeAnalysisEntity entity) {
         if (entity.getLocked() == Boolean.TRUE) {
-            throw new IllegalArgumentException(String.format("Feature analysis %s is locked.", entity.getName()));
+            throw new IllegalArgumentException("Feature analysis %s is locked.".formatted(entity.getName()));
         }
     }
 
