@@ -2,7 +2,6 @@ package org.ohdsi.webapi.pathway;
 
 import com.odysseusinc.arachne.commons.utils.ConverterUtils;
 import org.ohdsi.webapi.Constants;
-import org.ohdsi.webapi.Pagination;
 import org.ohdsi.webapi.check.CheckResult;
 import org.ohdsi.webapi.check.checker.pathway.PathwayChecker;
 import org.ohdsi.webapi.common.SourceMapKey;
@@ -24,18 +23,21 @@ import org.ohdsi.webapi.util.ExportUtil;
 import org.ohdsi.webapi.util.ExceptionUtils;
 import org.ohdsi.webapi.versioning.dto.VersionDTO;
 import org.ohdsi.webapi.versioning.dto.VersionUpdateDTO;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.convert.ConversionService;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestBody;
 
-import javax.transaction.Transactional;
-import javax.ws.rs.*;
-import javax.ws.rs.core.MediaType;
+import jakarta.transaction.Transactional;
+import jakarta.ws.rs.*;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.UriInfo;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -56,7 +58,6 @@ public class PathwayController {
 	private PathwayChecker checker;
 	private PermissionService permissionService;
 
-	@Autowired
 	public PathwayController(ConversionService conversionService, ConverterUtils converterUtils, PathwayService pathwayService, SourceService sourceService, CommonGenerationSensitiveInfoService sensitiveInfoService, PathwayChecker checker, PermissionService permissionService, I18nService i18nService) {
 
 		this.conversionService = conversionService;
@@ -158,7 +159,14 @@ public class PathwayController {
 	@Produces(MediaType.APPLICATION_JSON)
 	@Consumes(MediaType.APPLICATION_JSON)
 	@Transactional
-	public Page<PathwayAnalysisDTO> list(@Pagination Pageable pageable) {
+	public Page<PathwayAnalysisDTO> list(@Context UriInfo uriInfo) {
+
+    	var queryParams = uriInfo.getQueryParameters();
+        int page = queryParams.containsKey("page") ? Integer.parseInt(queryParams.get("page").get(0)) : 0;
+        int size = queryParams.containsKey("size") ? Integer.parseInt(queryParams.get("size").get(0)) : 10;
+
+        Pageable pageable = PageRequest.of(page, size);
+        
 		return pathwayService.getPage(pageable).map(pa -> {
 			PathwayAnalysisDTO dto = conversionService.convert(pa, PathwayAnalysisDTO.class);
 			permissionService.fillWriteAccess(pa, dto);
@@ -228,7 +236,7 @@ public class PathwayController {
 	@Transactional
 	public PathwayAnalysisDTO get(@PathParam("id") final Integer id) {
 		PathwayAnalysisEntity pathwayAnalysis = pathwayService.getById(id);
-		ExceptionUtils.throwNotFoundExceptionIfNull(pathwayAnalysis, String.format(i18nService.translate("pathways.manager.messages.notfound", "There is no pathway analysis with id = %d."), id));
+		ExceptionUtils.throwNotFoundExceptionIfNull(pathwayAnalysis, i18nService.translate("pathways.manager.messages.notfound", "There is no pathway analysis with id = %d.").formatted(id));
 		Map<Integer, Integer> eventCodes = pathwayService.getEventCohortCodes(pathwayAnalysis);
 
 		PathwayAnalysisDTO dto = conversionService.convert(pathwayAnalysis, PathwayAnalysisDTO.class);
@@ -316,7 +324,7 @@ public class PathwayController {
 	) {
 
 		PathwayAnalysisEntity pathwayAnalysis = pathwayService.getById(pathwayAnalysisId);
-		ExceptionUtils.throwNotFoundExceptionIfNull(pathwayAnalysis, String.format("There is no pathway analysis with id = %d.", pathwayAnalysisId));
+		ExceptionUtils.throwNotFoundExceptionIfNull(pathwayAnalysis, "There is no pathway analysis with id = %d.".formatted(pathwayAnalysisId));
 		PathwayAnalysisDTO pathwayAnalysisDTO = conversionService.convert(pathwayAnalysis, PathwayAnalysisDTO.class);
 		CheckResult checkResult = runDiagnostics(pathwayAnalysisDTO);
 		if (checkResult.hasCriticalErrors()) {
