@@ -35,9 +35,9 @@ public class PathwayVersionToPathwayVersionFullDTOConverter
 
     @Override
     public PathwayVersionFullDTO convert(PathwayVersion source) {
-        PathwayAnalysisEntity def = this.analysisRepository.findOne(source.getAssetId().intValue());
+        PathwayAnalysisEntity def = this.analysisRepository.findById(source.getAssetId().intValue()).get();
         ExceptionUtils.throwNotFoundExceptionIfNull(def,
-                String.format("There is no pathway analysis with id = %d.", source.getAssetId()));
+                "There is no pathway analysis with id = %d.".formatted(source.getAssetId()));
 
         PathwayAnalysisExportDTO exportDTO = Utils.deserialize(source.getAssetJson(), PathwayAnalysisExportDTO.class);
 
