@@ -1,7 +1,7 @@
 package org.ohdsi.webapi.prediction;
 
-import com.cosium.spring.data.jpa.entity.graph.domain.EntityGraph;
-import com.cosium.spring.data.jpa.entity.graph.domain.EntityGraphUtils;
+import com.cosium.spring.data.jpa.entity.graph.domain2.EntityGraph;
+import com.cosium.spring.data.jpa.entity.graph.domain2.DynamicEntityGraph;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -43,10 +43,10 @@ import org.springframework.core.convert.ConversionService;
 import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Service;
 
-import javax.persistence.EntityManager;
-import javax.persistence.PersistenceContext;
-import javax.transaction.Transactional;
-import javax.ws.rs.InternalServerErrorException;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.transaction.Transactional;
+import jakarta.ws.rs.InternalServerErrorException;
 import java.io.*;
 import java.math.BigDecimal;
 import java.util.*;
@@ -61,12 +61,12 @@ import static org.ohdsi.webapi.Constants.Params.PREDICTION_SKELETON_VERSION;
 @Transactional
 public class PredictionServiceImpl extends AnalysisExecutionSupport implements PredictionService, GeneratesNotification {
 
-    private static final EntityGraph DEFAULT_ENTITY_GRAPH = EntityGraphUtils.fromAttributePaths("source", "analysisExecution.resultFiles");
+    private static final EntityGraph DEFAULT_ENTITY_GRAPH = DynamicEntityGraph.loading().addPath("source", "analysisExecution.resultFiles").build();
 
-    private final EntityGraph COMMONS_ENTITY_GRAPH = EntityUtils.fromAttributePaths(
-            "createdBy",
-            "modifiedBy"
-    );
+    private final EntityGraph COMMONS_ENTITY_GRAPH = DynamicEntityGraph.loading().addPath(
+            "createdBy"//,
+            //"modifiedBy"
+    ).build();
 
     @Autowired
     private PredictionAnalysisRepository predictionAnalysisRepository;
@@ -123,12 +123,13 @@ public class PredictionServiceImpl extends AnalysisExecutionSupport implements P
 
     @Override
     public PredictionAnalysis getById(Integer id) {
-        return predictionAnalysisRepository.findOne(id, COMMONS_ENTITY_GRAPH);
+        return predictionAnalysisRepository.findById(id, COMMONS_ENTITY_GRAPH).get();
     }
 
     @Override
     public void delete(final int id) {
-        this.predictionAnalysisRepository.delete(id);
+        /* this.predictionAnalysisRepository.delete(id); MDACA Spring Boot 3 migration  */
+        this.predictionAnalysisRepository.deleteById(id);
     }
 
     @Override
@@ -167,7 +168,7 @@ public class PredictionServiceImpl extends AnalysisExecutionSupport implements P
 
     @Override
     public PredictionAnalysis copy(final int id) {
-        PredictionAnalysis analysis = this.predictionAnalysisRepository.findOne(id);
+        PredictionAnalysis analysis = this.predictionAnalysisRepository.findById(id).get();
         entityManager.detach(analysis); // Detach from the persistence context in order to save a copy
         analysis.setId(null);
         analysis.setName(getNameForCopy(analysis.getName()));
@@ -177,7 +178,7 @@ public class PredictionServiceImpl extends AnalysisExecutionSupport implements P
     @Override
     public PredictionAnalysis getAnalysis(int id) {
 
-        return this.predictionAnalysisRepository.findOne(id, COMMONS_ENTITY_GRAPH);
+        return this.predictionAnalysisRepository.findById(id, COMMONS_ENTITY_GRAPH).get();
     }
 
     @Override
@@ -188,7 +189,12 @@ public class PredictionServiceImpl extends AnalysisExecutionSupport implements P
 
     @Override
     public PatientLevelPredictionAnalysisImpl exportAnalysis(int id, String sourceKey) {
-        PredictionAnalysis pred = predictionAnalysisRepository.findOne(id);
+        /* PredictionAnalysis pred = predictionAnalysisRepository.findOne(id); MDACA Spring Boot 3 migration   */
+        Optional<PredictionAnalysis> optionalPred = predictionAnalysisRepository.findById(id);
+        PredictionAnalysis pred = null;
+        if (optionalPred.isPresent()) {
+            pred = optionalPred.get();
+        }
         PatientLevelPredictionAnalysisImpl expression;
         try {
             expression = Utils.deserialize(pred.getSpecification(), PatientLevelPredictionAnalysisImpl.class);
@@ -298,7 +304,7 @@ public class PredictionServiceImpl extends AnalysisExecutionSupport implements P
             pa.setName(NameUtils.getNameWithSuffix(analysis.getName(), this::getNamesLike));
 
             PredictionAnalysis savedAnalysis = this.createAnalysis(pa);
-            return predictionAnalysisRepository.findOne(savedAnalysis.getId(), COMMONS_ENTITY_GRAPH);
+            return predictionAnalysisRepository.findById(savedAnalysis.getId(), COMMONS_ENTITY_GRAPH).get();
         } catch (Exception e) {
             log.debug("Error while importing prediction analysis: " + e.getMessage());
             throw e;
@@ -331,8 +337,8 @@ public class PredictionServiceImpl extends AnalysisExecutionSupport implements P
         final Source source = sourceService.findBySourceKey(sourceKey);
         final Integer predictionAnalysisId = predictionAnalysis.getId();
 
-        String packageName = String.format("PredictionAnalysis.%s", SessionUtils.sessionId());
-        String packageFilename = String.format("prediction_study_%d.zip", predictionAnalysisId);
+        String packageName = "PredictionAnalysis.%s".formatted(SessionUtils.sessionId());
+        String packageFilename = "prediction_study_%d.zip".formatted(predictionAnalysisId);
         List<AnalysisFile> analysisFiles = new ArrayList<>();
         AnalysisFile analysisFile = new AnalysisFile();
         analysisFile.setFileName(packageFilename);
@@ -346,7 +352,7 @@ public class PredictionServiceImpl extends AnalysisExecutionSupport implements P
 
         JobParametersBuilder builder = prepareJobParametersBuilder(source, predictionAnalysisId, packageName, packageFilename)
                 .addString(PREDICTION_ANALYSIS_ID, predictionAnalysisId.toString())
-                .addString(JOB_NAME, String.format("Generating Prediction Analysis %d using %s (%s)", predictionAnalysisId, source.getSourceName(), source.getSourceKey()));
+                .addString(JOB_NAME, "Generating Prediction Analysis %d using %s (%s)".formatted(predictionAnalysisId, source.getSourceName(), source.getSourceKey()));
 
 
         Job generateAnalysisJob = generationUtils.buildJobForExecutionEngineBasedAnalysisTasklet(
@@ -378,7 +384,7 @@ public class PredictionServiceImpl extends AnalysisExecutionSupport implements P
     @Override
     public PredictionGenerationEntity getGeneration(Long generationId) {
 
-        return generationRepository.findOne(generationId, DEFAULT_ENTITY_GRAPH);
+        return generationRepository.findById(generationId, DEFAULT_ENTITY_GRAPH).get();
     }
     
     private PredictionAnalysis save(PredictionAnalysis analysis) {
