@@ -1,9 +1,9 @@
 package org.ohdsi.webapi.shiro.filters;
 
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.apache.shiro.SecurityUtils;
 import org.apache.shiro.web.servlet.AdviceFilter;
 import org.apache.shiro.web.util.WebUtils;
@@ -27,7 +27,7 @@ public class UrlBasedAuthorizingFilter extends AdviceFilter {
                               .replace("*", "&asterisk;");
 
     String method = httpRequest.getMethod();    
-    String permission = String.format("%s:%s", path.replace("/", ":"), method).toLowerCase();
+    String permission = "%s:%s".formatted(path.replace("/", ":"), method).toLowerCase();
 
     if (this.isPermitted(permission))
       return true;
