@@ -1,7 +1,7 @@
 package org.ohdsi.webapi.util;
 
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
 import java.io.OutputStream;
 
 public class HttpUtils {
@@ -11,7 +11,7 @@ public class HttpUtils {
     return  Response
             .ok(stream)
             .type(MediaType.APPLICATION_OCTET_STREAM)
-            .header("Content-Disposition", String.format("attachment; filename=\"%s\"", filename))
+            .header("Content-Disposition", "attachment; filename=\"%s\"".formatted(filename))
             .build();
   }
 }
